<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_reminder"
        android:textSize="20sp"
        android:id="@+id/timeReminder"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date"
            android:id="@+id/btn_date"/>

        <TextView
            android:id="@+id/setDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"/>

        <TextView
            android:id="@+id/setTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/set_message"
        android:id="@+id/messageReminder"/>

    <Button
        android:id="@+id/setDateReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date_reminder"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/time"
        android:id="@+id/btn_Alarm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:layout_marginTop="8dp"
        android:id="@+id/setAlarm"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_message1"
        android:inputType="text"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_reminder"
        android:id="@+id/setAlarmReminder"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/cancel_alarm" />

</LinearLayout>

</LinearLayout>